# poker-workshop

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  doxygen_config  format.sh
.github/workflows/: cmake.yml  codeql.yml  format_check.yml
docs/: data.md  deck.md  game.md  handstrengths.md  player.md  players.md
include/: config.h  data_structs.h  deck.h  enums.h  game.h  hand_strengths.h  mainargs.h  player.h  pot.h  utils.h  working_dir.h
src/: CMakeLists.txt  deck.cpp  game.cpp  hand_strengths.cpp  main.cpp  player.cpp  pot.cpp  utils.cpp
src/players/check_player/: check_player.cpp  check_player.h  check_player.md
src/players/human_player/: human_player.cpp  human_player.h  human_player.md
src/players/rand_player/: rand_player.cpp  rand_player.h  rand_player.md
src/players/test_player/: test_player.cpp  test_player.h  test_player.md
tests/: CMakeLists.txt  const_unittest.cpp  deck_unittest.cpp  game_test.h  game_test_manual.h  game_test_utils.h  hands_unittest.cpp  main_test.cpp  pot_unittest.cpp  test_gen_main.cpp  testc.cpp  utils_unittest.cpp
tests/gametests/: CMakeLists.txt  all_in_gametest.cpp  edge_cases_gametest.cpp  illegal_moves_gametest.cpp  main_test.cpp  normal_gametest.cpp  showdowns_gametest.cpp  test_gametest.cpp
tests/testc/: testc_compiler.h  testc_manual.h  testc_parser.h  testc_utils.h
tests/testscripts/: all_in.gts  edge_cases.gts  example.gts  illegal_moves.gts  normal.gts  showdowns.gts  template.gts  template.gtst
tests/unittests/: CMakeLists.txt  const_unittest.cpp  deck_unittest.cpp  gametest_unittest.cpp  main_test.cpp  test_test.cpp  thandutils_unittest.cpp  utils_unittest.cpp
tools/: CMakeLists.txt
tools/data_analytics/: analytics_utils.cpp  analytics_utils.h  handstrengths_utils.cpp  handstrengths_utils.h  main.cpp
tools/hand_strengths/: hand_utils.cpp  hand_utils.h  main.cpp
